# informer-

./: .gitignore  CLAUDE.md  README.md  TODO.md  docker-compose.yml  package-lock.json  package.json
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 34b5f8ad49fa_add_saved_repos.py  bc17f6d09451_initial_schema.py
backend/app/: config.py  github.py  mailer.py  main.py  models.py  poller.py  report_generator.py  saved_store.py  scheduler.py  schemas.py  security.py
backend/app/routers/: report.py  repos.py  saved.py  settings.py  stream.py  trending.py
backend/app/templates/: report.html.j2
backend/tests/: test_report_generator.py  test_security.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: PageHeader.tsx  ThemeToggle.tsx
frontend/src/components/ui/: toast.tsx
frontend/src/features/reports/: RepoPicker.tsx  ReportTable.tsx  ReportsPage.tsx  ScheduleSettings.tsx  SendReportForm.tsx
frontend/src/features/saved/: SavedPage.tsx
frontend/src/features/settings/: PatForm.tsx  SettingsPage.tsx
frontend/src/features/trending/: RepoCard.tsx  TrendingPage.tsx
frontend/src/hooks/: useHashRoute.ts  useTheme.ts  useTrendingStream.ts
frontend/src/lib/: api.ts  languageColors.ts
