[project]
name = "informer-backend"
version = "0.1.0"
description = "Informer backend (FastAPI)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "apscheduler>=3.10",
    "aiosmtplib>=3.0",
    "jinja2>=3.1",
    "pydantic-settings>=2.5",
    "cryptography>=43.0",
    "sse-starlette>=2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
